--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "chalk": "^4.1.0",
@@ -26,7 +27,8 @@
     "mssql": "^6.2.3",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {},
   "nodemonConfig": {
